Solved minor spacing issues

--- a/edwiserbridge/styles/setup-wizard.css
+++ b/edwiserbridge/styles/setup-wizard.css
@@ -44,6 +44,12 @@
     padding-top: 20px;
 }
 
+.es-p-b-10{
+    padding-bottom: 10px;
+}
+
+
+
 
 .eb_setup_popup fieldset{
     display: block;
@@ -558,7 +564,9 @@ a.es_text_links{
 
 .eb_setup_btn_wrap{
     text-align: center;
-    padding: 20px 10px;
+    /*padding: 20px 10px;*/
+    padding: 5px 20px 10px 10px;
+
 }
 
 .eb-setup-close-icon{
@@ -1174,7 +1182,7 @@ a.es_text_links{
 /* --------------- */
 
 .eb_plugin_configuration_checks{
-    width: 50%;
+    width: 55%;
     margin: auto;
 }
 
@@ -1184,10 +1192,10 @@ a.es_text_links{
 
 .eb_setup_complete_cards{
     display: flex;
-    padding: 20px 0px;
+    padding: 15px 0px;
     font-size: 14px !important;
     line-height: 19px;
-    margin-bottom: 15px;
+    /*margin-bottom: 15px;*/
 }
 
 .eb_setup_complete_card{
@@ -1209,7 +1217,7 @@ a.es_text_links{
 
 .eb_setup_complete_card_wrap{
     /*padding: 10px;*/
-    margin: 40px 10px;
+    margin: 20px 10px 20px 20px;
 }
 
 .eb_setup_p_wrap{
